--- a/celltypist_tutorial.ipynb
+++ b/celltypist_tutorial.ipynb
@@ -2085,7 +2085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "id": "forty-turning",
       "metadata": {
         "id": "forty-turning",
@@ -2114,7 +2114,8 @@
         "# Not run; predict the identity of each input cell with the new model.\n",
         "#predictions = celltypist.annotate(adata_400, model = new_model, majority_voting = True)\n",
         "# Alternatively, just specify the model path (recommended as this ensures the model is intact every time it is loaded).\n",
-        "predictions = celltypist.annotate(query_adata, model = 'data/celltypist_model.pkl', majority_voting = True)"
+        "predictions = celltypist.annotate(query_adata, model = 'data/celltypist_model.pkl', \n",
+        "                                  majority_voting = True)"
       ]
     },
     {
