group annotation by cluster

--- a/celltypist_tutorial.ipynb
+++ b/celltypist_tutorial.ipynb
@@ -1861,17 +1861,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "71d9273c",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<pandas.core.groupby.generic.SeriesGroupBy object at 0x13890f350>"
+              "AAACCTGAGAAGGTGA-1_1          Naive B cells\n",
+              "AAACCTGAGCTACCTA-1_1    Classical monocytes\n",
+              "AAACCTGAGGCGTACA-1_1    Classical monocytes\n",
+              "AAACCTGAGTACTTGC-1_1          Naive B cells\n",
+              "AAACCTGAGTGTACCT-1_1                    pDC\n",
+              "                               ...         \n",
+              "TTTGTCATCCAGAAGG-1_2    Classical monocytes\n",
+              "TTTGTCATCCTGCCAT-1_2    Classical monocytes\n",
+              "TTTGTCATCGTAGGTT-1_2    Classical monocytes\n",
+              "TTTGTCATCGTCCGTT-1_2             Mast cells\n",
+              "TTTGTCATCTGGTATG-1_2          Naive B cells\n",
+              "Name: predicted_cluster_labels, Length: 24807, dtype: category\n",
+              "Categories (81, object): ['Age-associated B cells', 'Alveolar macrophages', 'B cells', 'CD16+ NK cells', ..., 'Type 1 helper T cells', 'Type 17 helper T cells', 'gamma-delta T cells', 'pDC']"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1886,10 +1898,16 @@
         "    .agg(lambda x: x.value_counts().idxmax())  # Majority label per cluster\n",
         ")\n",
         "\n",
-        "adata.obs.groupby(\"seurat_clusters\")['predicted_labels']\n",
+        "# Annotate clusters with the most frequent cell type\n",
+        "cluster_labels['predicted_cluster_labels'] = cluster_labels['predicted_labels']\n",
+        "\n",
+        "# Map the cluster labels back to the original data\n",
+        "adata.obs['predicted_cluster_labels'] = adata.obs['predicted_cluster_labels'].map(cluster_labels['predicted_cluster_labels'])\n",
         "\n",
         "# Assign new labels to clusters\n",
-        "#adata.obs[\"predicted_cluster_labels\"] = adata.obs[\"seurat_clusters\"].map(cluster_labels)"
+        "#adata.obs[\"predicted_cluster_labels\"] = adata.obs[\"seurat_clusters\"].map(cluster_labels)\n",
+        "adata.obs['predicted_cluster_labels'] = adata.obs['predicted_cluster_labels'].astype('category')\n",
+        "adata.obs['predicted_cluster_labels']"
       ]
     },
     {
