more results figs + intersections

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
+    "import plotly.io as pio\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os"
@@ -130,10 +131,13 @@
          "x": 0.5,
          "xanchor": "center",
          "y": 0.95,
-         "yanchor": "top"
+         "yanchor": "middle"
         },
         "yaxis": {
          "title": {
+          "font": {
+           "size": 14
+          },
           "text": "Nb of clusters"
          }
         }
@@ -163,14 +167,16 @@
     "# Change the bar mode\n",
     "fig.update_layout(barmode='group', \n",
     "                  template='none',\n",
-    "                  yaxis_title='Nb of clusters',\n",
+    "                  yaxis = dict(title='Nb of clusters',\n",
+    "                               title_font = dict(size=14)),\n",
     "                  title = dict(text = 'SingleR annotation results for 5 reference datasets',\n",
     "                               font=dict(size=16),\n",
     "                               xanchor='center',\n",
-    "                               yanchor='center',\n",
+    "                               yanchor='middle',\n",
     "                               x=0.5,\n",
     "                               y=0.95))\n",
     "fig.show()\n",
+    "pio.write_image(fig, '../../PNG_results/sbm_barchart_singleR_results.png')\n",
     "\n"
    ]
   },
