CP figure piechart

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -2537,6 +2537,172 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "marker": {
+          "color": "green"
+         },
+         "name": "Correct",
+         "type": "bar",
+         "x": [
+          "scCATCH",
+          "scTYPE",
+          "scMayoMap"
+         ],
+         "y": [
+          10,
+          21,
+          19
+         ]
+        },
+        {
+         "marker": {
+          "color": "orange"
+         },
+         "name": "Partially correct",
+         "type": "bar",
+         "x": [
+          "scCATCH",
+          "scTYPE",
+          "scMayoMap"
+         ],
+         "y": [
+          4,
+          5,
+          9
+         ]
+        },
+        {
+         "marker": {
+          "color": "red"
+         },
+         "name": "Incorrect",
+         "type": "bar",
+         "x": [
+          "scCATCH",
+          "scTYPE",
+          "scMayoMap"
+         ],
+         "y": [
+          40,
+          28,
+          26
+         ]
+        }
+       ],
+       "layout": {
+        "barcornerradius": 5,
+        "barmode": "group",
+        "template": {
+         "data": {
+          "scatter": [
+           {
+            "type": "scatter"
+           }
+          ]
+         }
+        },
+        "title": {
+         "font": {
+          "size": 16
+         },
+         "text": "Annotation results for 3 different marker-based annotation methods",
+         "x": 0.5,
+         "xanchor": "center",
+         "y": 0.95,
+         "yanchor": "middle"
+        },
+        "yaxis": {
+         "title": {
+          "font": {
+           "size": 14
+          },
+          "text": "Nb of clusters"
+         }
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Figure 4 - show summary results for marker-based annotation\n",
+    "# Simple barchart \n",
+    "\n",
+    "ref_datasets=['scCATCH', 'scTYPE', 'scMayoMap']\n",
+    "\n",
+    "fig = go.Figure(data=[\n",
+    "    go.Bar(name='Correct', x=ref_datasets, y=[10, 21, 19], marker_color='green'),\n",
+    "    go.Bar(name='Partially correct', x=ref_datasets, y=[4, 5, 9], marker_color='orange'),\n",
+    "    go.Bar(name='Incorrect', x=ref_datasets, y=[40, 28, 26], marker_color='red'),\n",
+    "], layout=dict(\n",
+    "        barcornerradius=5,\n",
+    "    ),)\n",
+    "# Change the bar mode\n",
+    "fig.update_layout(barmode='group', \n",
+    "                  template='none',\n",
+    "                  yaxis = dict(title='Nb of clusters',\n",
+    "                               title_font = dict(size=14)),\n",
+    "                  title = dict(text = 'Annotation results for 3 different marker-based annotation methods',\n",
+    "                               font=dict(size=16),\n",
+    "                               xanchor='center',\n",
+    "                               yanchor='middle',\n",
+    "                               x=0.5,\n",
+    "                               y=0.95))\n",
+    "fig.show()\n",
+    "pio.write_image(fig, '../../PNG_results/cp_barchart_markerbased_results.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Figure 4b - smae results but in pie chart forms\n",
+    "\n",
+    "labels = [\"Correct\", \"Partially correct\", \"Incorrect\"]\n",
+    "\n",
+    "# Create subplots: use 'domain' type for Pie subplot\n",
+    "fig = make_subplots(rows=1, cols=3, specs=[[{'type':'domain'}, \n",
+    "                                            {'type':'domain'},\n",
+    "                                            {'type':'domain'}]])\n",
+    "fig.add_trace(go.Pie(labels=labels, values=[10, 4, 40], name=\"scCATCH\"),\n",
+    "              1, 1)\n",
+    "fig.add_trace(go.Pie(labels=labels, values=[21, 5, 28], name=\"scTYPE\"),\n",
+    "              1, 2)\n",
+    "fig.add_trace(go.Pie(labels=labels, values=[19, 9, 26], name=\"scMayoMap\"),\n",
+    "              1, 3)\n",
+    "\n",
+    "# Use `hole` to create a donut-like pie chart\n",
+    "fig.update_traces(hole=.4, hoverinfo=\"label+percent+name\", \n",
+    "                  marker=dict(colors=['green', 'orange', 'red']))\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # Add annotations in the center of the donut pies.\n",
+    "    annotations=[dict(text='scCATCH', x=sum(fig.get_subplot(1, 1).x) / 2, y=0.5,\n",
+    "                      font_size=14, showarrow=False, xanchor=\"center\"),\n",
+    "                 dict(text='scTYPE', x=sum(fig.get_subplot(1, 2).x) / 2, y=0.5,\n",
+    "                      font_size=14, showarrow=False, xanchor=\"center\"),\n",
+    "                 dict(text='scMM', x=sum(fig.get_subplot(1, 3).x) / 2, y=0.5,\n",
+    "                 font_size=20, showarrow=False, xanchor=\"center\")])\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
