--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -3633,6 +3633,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Joint barchart comparing marker-based annotations cross SBM and CP datasets\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
