prep for more figures

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -2533,6 +2533,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### GPTCelltype results vs other methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Figure x - Plotting gptcelltype results versus other marker, correlation and supervised learning methods\n",
+    "# Methods compared : SingleR, scMAP, scType, scMayoMap, scClassify, scDeepSort, CellTypist\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Choroid Plexus results"
    ]
   },
