barchart all tissues

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2476,6 @@
     "# Figure 3 - Test different 'add-ons' to see results on sum of correct and partially correct\n",
     "# Horizontal barplot showing : Base SingleR result for the best reference dataset (mATLAS Droplet) + Base scMAP result for mATLAS Droplet\n",
     "# + SingleR result for mATLAS and TM + scMAP for mATLAS and TM + SingleR with MAGIC imputation\n",
-    "ref_datasets = ['SingleR + TM', 'SingleR + MAGIC', 'scMAP + TM', 'SingleR', 'scMAP']\n",
     "ref_datasets = ['SingleR + MAGIC', 'SingleR + TM', 'SingleR', 'scMAP + TM', 'scMAP']\n",
     "\n",
     "\n",
@@ -2542,8 +2541,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Figure x - Plotting gptcelltype results versus other marker, correlation and supervised learning methods\n",
-    "# Methods compared : SingleR, scMAP, scType, scMayoMap, scClassify, scDeepSort, CellTypist\n",
     "\n"
    ]
   },
@@ -3656,8 +3653,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Joint barchart comparing marker-based annotations cross SBM and CP datasets\n",
-    "\n"
+    "# Joint barchart comparing all annotations cross SBM and CP datasets\n",
+    "\n",
+    "# Figure x - Plotting gptcelltype results versus other marker, correlation and supervised learning methods\n",
+    "# Methods compared : SingleR, scMAP, scType, scMayoMap, scClassify, scDeepSort, CellTypist\n",
+    "ref_methods=['scMap', 'SingleR','scCATCH', 'scTYPE', 'scMayoMap', 'scClassify', 'CellTypist','scDeepSort', 'GPTCellType']\n",
+    "\n",
+    "\n",
+    "fig = go.Figure(data=[\n",
+    "    go.Bar(name='Choroid Plexus', x=ref_methods, y=[0, 0, 14, 26, 28, ], marker_color='#3A4F41'),\n",
+    "    go.Bar(name='Skull Bone Marrow', x=ref_methods, y=[8, 21, 29], marker_color='#B9314F'),\n",
+    "], layout=dict(\n",
+    "        barcornerradius=5,\n",
+    "    ),)\n",
+    "# Change the bar mode\n",
+    "fig.update_layout(barmode='group', \n",
+    "                  template='none',\n",
+    "                  yaxis = dict(title='Nb of clusters',\n",
+    "                               title_font = dict(size=14)),\n",
+    "                  title = dict(text = 'Annotation results for 3 different marker-based annotation methods',\n",
+    "                               font=dict(size=16),\n",
+    "                               xanchor='center',\n",
+    "                               yanchor='middle',\n",
+    "                               x=0.5,\n",
+    "                               y=0.95))\n",
+    "fig.show()\n",
+    "pio.write_image(fig, '../../PNG_results/sbm_barchart_markerbased_results.png')"
    ]
   },
   {
