--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3649,9 +3649,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "marker": {
+          "color": "#3A4F41"
+         },
+         "name": "Choroid Plexus",
+         "type": "bar",
+         "x": [
+          "scMap",
+          "SingleR",
+          "scCATCH",
+          "scTYPE",
+          "scMayoMap",
+          "scClassify",
+          "CellTypist",
+          "scDeepSort",
+          "GPTCellType"
+         ],
+         "y": {
+          "bdata": "AAAAAAAAAAAAAAAAAAAAANBeQnsJ7TlAL6G9hPYSSEDQXkJ7Ce1JQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHsJ7SW0l1FA",
+          "dtype": "f8"
+         }
+        },
+        {
+         "marker": {
+          "color": "#B9314F"
+         },
+         "name": "Skull Bone Marrow",
+         "type": "bar",
+         "x": [
+          "scMap",
+          "SingleR",
+          "scCATCH",
+          "scTYPE",
+          "scMayoMap",
+          "scClassify",
+          "CellTypist",
+          "scDeepSort",
+          "GPTCellType"
+         ],
+         "y": {
+          "bdata": "AAAAAAAAS0AAAAAAAIBUQAAAAAAAAEVAAAAAAAAAU0AAAAAAAIBUQAAAAAAAgFRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFZA",
+          "dtype": "f8"
+         }
+        }
+       ],
+       "layout": {
+        "barcornerradius": 5,
+        "barmode": "group",
+        "template": {
+         "data": {
+          "scatter": [
+           {
+            "type": "scatter"
+           }
+          ]
+         }
+        },
+        "title": {
+         "font": {
+          "size": 16
+         },
+         "text": "Annotation results across different methods",
+         "x": 0.5,
+         "xanchor": "center",
+         "y": 0.95,
+         "yanchor": "middle"
+        },
+        "yaxis": {
+         "title": {
+          "font": {
+           "size": 14
+          },
+          "text": "Proportion of correct + partially correct (%)"
+         }
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Joint barchart comparing all annotations cross SBM and CP datasets\n",
     "\n",
@@ -3661,24 +3750,36 @@
     "\n",
     "\n",
     "fig = go.Figure(data=[\n",
-    "    go.Bar(name='Choroid Plexus', x=ref_methods, y=[0, 0, 14, 26, 28, ], marker_color='#3A4F41'),\n",
-    "    go.Bar(name='Skull Bone Marrow', x=ref_methods, y=[8, 21, 29], marker_color='#B9314F'),\n",
+    "    go.Bar(name='Choroid Plexus', x=ref_methods, y=np.array([0, 0, 14, 26, 28, 0, 0, 0, 38]) / 54 * 100,\n",
+    "           marker_color='#3A4F41'),\n",
+    "    go.Bar(name='Skull Bone Marrow', x=ref_methods, y=np.array([27, 41, 21, 38, 41, 41, 0, 0, 44]) / 50 * 100, \n",
+    "           marker_color='#B9314F'),\n",
     "], layout=dict(\n",
     "        barcornerradius=5,\n",
     "    ),)\n",
     "# Change the bar mode\n",
     "fig.update_layout(barmode='group', \n",
     "                  template='none',\n",
-    "                  yaxis = dict(title='Nb of clusters',\n",
+    "                  yaxis = dict(title='Proportion of correct + partially correct (%)',\n",
     "                               title_font = dict(size=14)),\n",
-    "                  title = dict(text = 'Annotation results for 3 different marker-based annotation methods',\n",
+    "                  title = dict(text = 'Annotation results across different methods',\n",
     "                               font=dict(size=16),\n",
     "                               xanchor='center',\n",
     "                               yanchor='middle',\n",
     "                               x=0.5,\n",
     "                               y=0.95))\n",
     "fig.show()\n",
-    "pio.write_image(fig, '../../PNG_results/sbm_barchart_markerbased_results.png')"
+    "#pio.write_image(fig, '../../PNG_results/sbm_barchart_markerbased_results.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Figure X - comparing GPT4.5 with other LLM methods\n",
+    "\n"
    ]
   },
   {
