--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -3649,7 +3649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3672,12 +3672,11 @@
           "scTYPE",
           "scMayoMap",
           "scClassify",
-          "CellTypist",
           "scDeepSort",
           "GPTCellType"
          ],
          "y": {
-          "bdata": "AAAAAAAAAAAAAAAAAAAAANBeQnsJ7TlAL6G9hPYSSEDQXkJ7Ce1JQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHsJ7SW0l1FA",
+          "bdata": "AAAAAAAAAAAAAAAAAAAAANBeQnsJ7TlAL6G9hPYSSEDQXkJ7Ce1JQAAAAAAAAAAAAAAAAAAAAAB7Ce0ltJdRQA==",
           "dtype": "f8"
          }
         },
@@ -3694,12 +3693,11 @@
           "scTYPE",
           "scMayoMap",
           "scClassify",
-          "CellTypist",
           "scDeepSort",
           "GPTCellType"
          ],
          "y": {
-          "bdata": "AAAAAAAAS0AAAAAAAIBUQAAAAAAAAEVAAAAAAAAAU0AAAAAAAIBUQAAAAAAAgFRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFZA",
+          "bdata": "AAAAAAAAS0AAAAAAAIBUQAAAAAAAAEVAAAAAAAAAU0AAAAAAAIBUQAAAAAAAgFRAAAAAAAAAAAAAAAAAAABWQA==",
           "dtype": "f8"
          }
         }
@@ -3746,13 +3744,13 @@
     "\n",
     "# Figure x - Plotting gptcelltype results versus other marker, correlation and supervised learning methods\n",
     "# Methods compared : SingleR, scMAP, scType, scMayoMap, scClassify, scDeepSort, CellTypist\n",
-    "ref_methods=['scMap', 'SingleR','scCATCH', 'scTYPE', 'scMayoMap', 'scClassify', 'CellTypist','scDeepSort', 'GPTCellType']\n",
+    "ref_methods=['scMap', 'SingleR','scCATCH', 'scTYPE', 'scMayoMap', 'scClassify', 'scDeepSort', 'GPTCellType']\n",
     "\n",
     "\n",
     "fig = go.Figure(data=[\n",
-    "    go.Bar(name='Choroid Plexus', x=ref_methods, y=np.array([0, 0, 14, 26, 28, 0, 0, 0, 38]) / 54 * 100,\n",
+    "    go.Bar(name='Choroid Plexus', x=ref_methods, y=np.array([0, 0, 14, 26, 28, 0, 0, 38]) / 54 * 100,\n",
     "           marker_color='#3A4F41'),\n",
-    "    go.Bar(name='Skull Bone Marrow', x=ref_methods, y=np.array([27, 41, 21, 38, 41, 41, 0, 0, 44]) / 50 * 100, \n",
+    "    go.Bar(name='Skull Bone Marrow', x=ref_methods, y=np.array([27, 41, 21, 38, 41, 41, 0, 44]) / 50 * 100, \n",
     "           marker_color='#B9314F'),\n",
     "], layout=dict(\n",
     "        barcornerradius=5,\n",
