change colour scheme

--- a/src/plot_figures.ipynb
+++ b/src/plot_figures.ipynb
@@ -33,12 +33,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Skull bone marrow results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +57,7 @@
        "data": [
         {
          "marker": {
-          "color": "#4D8B31"
+          "color": "#4C9F70"
          },
          "name": "Correct",
          "type": "bar",
@@ -61,17 +68,14 @@
           "CellXGene",
           "Tabula Muris"
          ],
-         "y": [
-          3,
-          10,
-          5,
-          9,
-          8
-         ]
+         "y": {
+          "bdata": "AAAAAAAAGEAAAAAAAAA0QAAAAAAAACRAAAAAAAAAMkAAAAAAAAAwQA==",
+          "dtype": "f8"
+         }
         },
         {
          "marker": {
-          "color": "#FFC800"
+          "color": "#F2CD5D"
          },
          "name": "Partially correct",
          "type": "bar",
@@ -82,17 +86,14 @@
           "CellXGene",
           "Tabula Muris"
          ],
-         "y": [
-          12,
-          31,
-          35,
-          30,
-          30
-         ]
+         "y": {
+          "bdata": "AAAAAAAAOEAAAAAAAABPQAAAAAAAgFFAAAAAAAAATkAAAAAAAABOQA==",
+          "dtype": "f8"
+         }
         },
         {
          "marker": {
-          "color": "#FF8427"
+          "color": "#F45B69"
          },
          "name": "Incorrect",
          "type": "bar",
@@ -103,13 +104,10 @@
           "CellXGene",
           "Tabula Muris"
          ],
-         "y": [
-          35,
-          9,
-          10,
-          11,
-          12
-         ]
+         "y": {
+          "bdata": "AAAAAACAUUAAAAAAAAAyQAAAAAAAADRAAAAAAAAANkAAAAAAAAA4QA==",
+          "dtype": "f8"
+         }
         }
        ],
        "layout": {
@@ -128,7 +126,7 @@
          "font": {
           "size": 16
          },
-         "text": "SingleR annotation results for 5 reference datasets",
+         "text": "SingleR annotation of SBM using 5 reference datasets",
          "x": 0.5,
          "xanchor": "center",
          "y": 0.95,
@@ -147,7 +145,7 @@
           "font": {
            "size": 14
           },
-          "text": "Nb of clusters"
+          "text": "Percentage of clusters (%)"
          }
         }
        }
@@ -160,27 +158,30 @@
    "source": [
     "# Figure 1 - show summary results for different reference datasets\n",
     "# Simple barchart for all 5 reference datasets\n",
+    "colors=['#4C9F70', '#F2CD5D', '#F45B69']\n",
     "\n",
     "ref_datasets=['mATLAS FACS', 'mATLAS Droplet', 'PangLao', 'CellXGene', 'Tabula Muris']\n",
-    "y1 = [3, 10, 5, 9, 8]\n",
-    "y2 = [12, 31, 35, 30, 30]\n",
-    "y3 = [12, 31, 35, 30, 30]\n",
+    "\n",
+    "# Results\n",
+    "correct = np.array([3, 10, 5, 9, 8]) / 50 * 100\n",
+    "partially_correct = np.array([12, 31, 35, 30, 30]) / 50 * 100\n",
+    "incorrect = np.array([35, 9, 10, 11, 12]) / 50 * 100\n",
     "\n",
     "fig = go.Figure(data=[\n",
-    "    go.Bar(name='Correct', x=ref_datasets, y=[3, 10, 5, 9, 8], marker_color='#4D8B31'),\n",
-    "    go.Bar(name='Partially correct', x=ref_datasets, y=[12, 31, 35, 30, 30], marker_color='#FFC800'),\n",
-    "    go.Bar(name='Incorrect', x=ref_datasets, y=[35, 9, 10, 11, 12], marker_color='#FF8427'),\n",
+    "    go.Bar(name='Correct', x=ref_datasets, y=correct, marker_color='#4C9F70'),\n",
+    "    go.Bar(name='Partially correct', x=ref_datasets, y=partially_correct, marker_color='#F2CD5D'),\n",
+    "    go.Bar(name='Incorrect', x=ref_datasets, y=incorrect, marker_color='#F45B69'),\n",
     "], layout=dict(\n",
     "        barcornerradius=5,\n",
     "    ),)\n",
     "# Change the bar mode\n",
     "fig.update_layout(barmode='group', \n",
     "                  template='none',\n",
-    "                  yaxis = dict(title='Nb of clusters',\n",
+    "                  yaxis = dict(title='Percentage of clusters (%)',\n",
     "                               title_font = dict(size=14)),\n",
     "                  xaxis = dict(title='Reference datasets',\n",
     "                               title_font = dict(size=14)),\n",
-    "                  title = dict(text = 'SingleR annotation results for 5 reference datasets',\n",
+    "                  title = dict(text = 'SingleR annotation of SBM using 5 reference datasets',\n",
     "                               font=dict(size=16),\n",
     "                               xanchor='center',\n",
     "                               yanchor='middle',\n",
@@ -1244,6 +1245,197 @@
     "                 dict(text='TM', x=sum(fig.get_subplot(1, 5).x) / 2, y=0.5,\n",
     "                 font_size=20, showarrow=False, xanchor=\"center\")])\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "plotlyServerURL": "https://plot.ly"
+       },
+       "data": [
+        {
+         "marker": {
+          "color": "#F2CD5D",
+          "line": {
+           "color": "orange",
+           "width": 0
+          }
+         },
+         "name": "Partially correct",
+         "orientation": "h",
+         "text": [
+          "24%",
+          "62%",
+          "70%",
+          "60%",
+          "60%"
+         ],
+         "textposition": "auto",
+         "type": "bar",
+         "x": {
+          "bdata": "AAAAAAAAOEAAAAAAAABPQAAAAAAAgFFAAAAAAAAATkAAAAAAAABOQA==",
+          "dtype": "f8"
+         },
+         "y": [
+          "mATLAS FACS",
+          "mATLAS Droplet",
+          "PangLao",
+          "Brioni et al",
+          "Tabula Muris"
+         ]
+        },
+        {
+         "marker": {
+          "color": "#4C9F70",
+          "line": {
+           "color": "green",
+           "width": 0
+          }
+         },
+         "name": "Correct",
+         "orientation": "h",
+         "text": [
+          "6%",
+          "20%",
+          "10%",
+          "18%",
+          "16%"
+         ],
+         "textposition": "auto",
+         "type": "bar",
+         "x": {
+          "bdata": "AAAAAAAAGEAAAAAAAAA0QAAAAAAAACRAAAAAAAAAMkAAAAAAAAAwQA==",
+          "dtype": "f8"
+         },
+         "y": [
+          "mATLAS FACS",
+          "mATLAS Droplet",
+          "PangLao",
+          "Brioni et al",
+          "Tabula Muris"
+         ]
+        },
+        {
+         "marker": {
+          "color": "#F45B69",
+          "pattern": {
+           "shape": "/"
+          }
+         },
+         "name": "Incorrect",
+         "orientation": "h",
+         "type": "bar",
+         "width": 0.8,
+         "x": {
+          "bdata": "AAAAAACAUUAAAAAAAAAyQAAAAAAAADRAAAAAAAAANkAAAAAAAAA4QA==",
+          "dtype": "f8"
+         },
+         "y": [
+          "mATLAS FACS",
+          "mATLAS Droplet",
+          "PangLao",
+          "Brioni et al",
+          "Tabula Muris"
+         ]
+        }
+       ],
+       "layout": {
+        "barcornerradius": 6,
+        "barmode": "stack",
+        "height": 600,
+        "template": {
+         "data": {
+          "scatter": [
+           {
+            "type": "scatter"
+           }
+          ]
+         }
+        },
+        "xaxis": {
+         "title": {
+          "font": {
+           "size": 14
+          },
+          "text": "Percentage of clusters (%)"
+         }
+        },
+        "yaxis": {
+         "automargin": true
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Figure X - Comparisons of reference datasets\n",
+    "ref_datasets=['mATLAS FACS', 'mATLAS Droplet', 'PangLao', 'Brioni et al', 'Tabula Muris']\n",
+    "colors=['#4C9F70', '#F2CD5D', '#F45B69']\n",
+    "\n",
+    "# Results\n",
+    "correct = np.array([3, 10, 5, 9, 8]) / 50 * 100\n",
+    "partially_correct = np.array([12, 31, 35, 30, 30]) / 50 * 100\n",
+    "incorrect = np.array([35, 9, 10, 11, 12]) / 50 * 100\n",
+    "\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Bar(\n",
+    "    y=ref_datasets,\n",
+    "    x=partially_correct,\n",
+    "    name='Partially correct',\n",
+    "    orientation='h',\n",
+    "    marker=dict(\n",
+    "        color='#F2CD5D',\n",
+    "        line=dict(color='orange', width=0)\n",
+    "    ),\n",
+    "    text = [f\"{int(val)}%\" for val in partially_correct],\n",
+    "    textposition = 'auto'\n",
+    "    ))\n",
+    "\n",
+    "fig.add_trace(go.Bar(\n",
+    "    y=ref_datasets,\n",
+    "    x=correct,\n",
+    "    name='Correct',\n",
+    "    orientation='h',\n",
+    "    marker=dict(\n",
+    "        color='#4C9F70',\n",
+    "        line=dict(color='green', width=0)\n",
+    "    ),\n",
+    "    text = [f\"{int(val)}%\" for val in correct],\n",
+    "    textposition = 'auto'\n",
+    "    ))\n",
+    "\n",
+    "fig.add_trace(go.Bar(\n",
+    "    y=ref_datasets,\n",
+    "    x=incorrect,\n",
+    "    name='Incorrect',\n",
+    "    orientation='h',\n",
+    "    marker=dict(\n",
+    "        color='#F45B69',\n",
+    "        pattern_shape = '/'),\n",
+    "    width = 0.8\n",
+    "))\n",
+    "\n",
+    "fig.update_layout(barmode='stack', \n",
+    "                  barcornerradius=6,\n",
+    "                  template='none',\n",
+    "                  xaxis = dict(\n",
+    "                      title='Percentage of clusters (%)',\n",
+    "                      title_font = dict(size=14)),\n",
+    "                  yaxis = dict(automargin=True),\n",
+    "                  height=600)\n",
+    "fig.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2347,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2359,30 +2551,27 @@
        "data": [
         {
          "marker": {
-          "color": "rgba(255, 170, 0, 0.79)",
+          "color": "#F2CD5D",
           "line": {
            "color": "orange",
-           "width": 3
+           "width": 0
           }
          },
          "name": "Partially correct",
          "orientation": "h",
          "text": [
-          "32",
-          "34",
-          "31",
-          "31",
-          "19"
+          "64%",
+          "68%",
+          "62%",
+          "62%",
+          "38%"
          ],
          "textposition": "auto",
          "type": "bar",
-         "x": [
-          32,
-          34,
-          31,
-          31,
-          19
-         ],
+         "x": {
+          "bdata": "AAAAAAAAUEAAAAAAAABRQAAAAAAAAE9AAAAAAAAAT0AAAAAAAABDQA==",
+          "dtype": "f8"
+         },
          "y": [
           "SingleR + MAGIC",
           "SingleR + TM",
@@ -2393,30 +2582,27 @@
         },
         {
          "marker": {
-          "color": "rgba(0, 144, 27, 0.58)",
+          "color": "#4C9F70",
           "line": {
            "color": "green",
-           "width": 3
+           "width": 0
           }
          },
          "name": "Correct",
          "orientation": "h",
          "text": [
-          "11",
-          "6",
-          "10",
-          "7",
-          "8"
+          "22%",
+          "12%",
+          "20%",
+          "14%",
+          "16%"
          ],
          "textposition": "auto",
          "type": "bar",
-         "x": [
-          11,
-          6,
-          10,
-          7,
-          8
-         ],
+         "x": {
+          "bdata": "AAAAAAAANkAAAAAAAAAoQAAAAAAAADRAAQAAAAAALEAAAAAAAAAwQA==",
+          "dtype": "f8"
+         },
          "y": [
           "SingleR + MAGIC",
           "SingleR + TM",
@@ -2427,7 +2613,7 @@
         },
         {
          "marker": {
-          "color": "red",
+          "color": "#F45B69",
           "pattern": {
            "shape": "/"
           }
@@ -2436,13 +2622,10 @@
          "orientation": "h",
          "type": "bar",
          "width": 0.8,
-         "x": [
-          7,
-          10,
-          9,
-          12,
-          23
-         ],
+         "x": {
+          "bdata": "AQAAAAAALEAAAAAAAAA0QAAAAAAAADJAAAAAAAAAOEAAAAAAAABHQA==",
+          "dtype": "f8"
+         },
          "y": [
           "SingleR + MAGIC",
           "SingleR + TM",
@@ -2453,6 +2636,7 @@
         }
        ],
        "layout": {
+        "barcornerradius": 6,
         "barmode": "stack",
         "height": 600,
         "template": {
@@ -2469,7 +2653,7 @@
           "font": {
            "size": 14
           },
-          "text": "Nb of clusters"
+          "text": "Percentage of clusters (%)"
          }
         },
         "yaxis": {
@@ -2488,50 +2672,55 @@
     "# + SingleR result for mATLAS and TM + scMAP for mATLAS and TM + SingleR with MAGIC imputation\n",
     "ref_datasets = ['SingleR + MAGIC', 'SingleR + TM', 'SingleR', 'scMAP + TM', 'scMAP']\n",
     "\n",
+    "# Results\n",
+    "partially_correct = np.array([32, 34, 31, 31, 19]) / 50 * 100\n",
+    "correct = np.array([11, 6, 10, 7, 8]) / 50 * 100\n",
+    "incorrect = np.array([7, 10, 9, 12, 23]) / 50 * 100\n",
     "\n",
     "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Bar(\n",
     "    y=ref_datasets,\n",
-    "    x=[32, 34, 31, 31, 19],\n",
+    "    x=partially_correct,\n",
     "    name='Partially correct',\n",
     "    orientation='h',\n",
     "    marker=dict(\n",
-    "        color='rgba(255, 170, 0, 0.79)',\n",
-    "        line=dict(color='orange', width=3)\n",
+    "        color='#F2CD5D',\n",
+    "        line=dict(color='orange', width=0)\n",
     "    ),\n",
-    "    text = [32, 34, 31, 31, 19],\n",
+    "    text = [f\"{int(val)}%\" for val in partially_correct],\n",
     "    textposition = 'auto'\n",
     "    ))\n",
     "\n",
     "fig.add_trace(go.Bar(\n",
     "    y=ref_datasets,\n",
-    "    x=[11, 6, 10, 7, 8],\n",
+    "    x=correct,\n",
     "    name='Correct',\n",
     "    orientation='h',\n",
     "    marker=dict(\n",
-    "        color='rgba(0, 144, 27, 0.58)',\n",
-    "        line=dict(color='green', width=3)\n",
+    "        color='#4C9F70',\n",
+    "        line=dict(color='green', width=0)\n",
     "    ),\n",
-    "    text = [11, 6, 10, 7, 8],\n",
+    "    text = [f\"{int(val)}%\" for val in correct],\n",
     "    textposition = 'auto'\n",
     "    ))\n",
     "\n",
     "fig.add_trace(go.Bar(\n",
     "    y=ref_datasets,\n",
-    "    x=[7, 10, 9, 12, 23],\n",
+    "    x=incorrect,\n",
     "    name='Incorrect',\n",
     "    orientation='h',\n",
     "    marker=dict(\n",
-    "        color='red',\n",
+    "        color='#F45B69',\n",
     "        pattern_shape = '/'),\n",
     "    width = 0.8\n",
     "))\n",
     "\n",
     "fig.update_layout(barmode='stack', \n",
+    "                  barcornerradius=6,\n",
     "                  template='none',\n",
     "                  xaxis = dict(\n",
-    "                      title='Nb of clusters',\n",
+    "                      title='Percentage of clusters (%)',\n",
     "                      title_font = dict(size=14)),\n",
     "                  yaxis = dict(automargin=True),\n",
     "                  height=600)\n",
